--- a/QuanLyCongTy/FQuanLy.resx
+++ b/QuanLyCongTy/FQuanLy.resx
@@ -134,7 +134,7 @@
         LC9Rn+1vUFfkoKdP6HR+A6p/PgpqFXutAAAAAElFTkSuQmCC
 </value>
   </data>
-  <data name="btnTaoDA.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnDA.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
         vAAADrwBlbxySQAAAlpJREFUWEfVlzFoFEEUhg8JIUgqsRARkSBiFVIFEQnBKlhaBSurK6xFJARBRETE
